sidebar toggle button no longer overlaps dropdown menus

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -196,7 +196,7 @@
       top: calc(100% + 24px);
       visibility: hidden;
       overflow: visible;
-      z-index: 9;
+      z-index: 29;
       left: 0;
       opacity: 0;
       background: white;
