--- a/style.css
+++ b/style.css
@@ -656,7 +656,7 @@ a img {
     top: calc(100% + 24px);
     visibility: hidden;
     overflow: visible;
-    z-index: 9;
+    z-index: 29;
     left: 0;
     opacity: 0;
     background: white;
